# 07-genome-sequence-aligner

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/align/: hirschberg.rs  mod.rs
src/fasta/: mod.rs
src/sam/: mod.rs
src/simd/: mod.rs
src/traceback/: mod.rs
tests/: integration_test.rs  output.sam  test_indel_query.fa  test_indel_target.fa  test_query.fa  test_target.fa
