[package]
name = "genome-aligner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "genome-aligner"
path = "src/main.rs"

[lib]
name = "genome_aligner"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
